--- a/guide_arxiv.tex
+++ b/guide_arxiv.tex
@@ -161,7 +161,7 @@ The na\"{i}ve approach is to write the equations from Eq \ref{eq:dkl deriv} dire
 \begin{align}
 	\br{f_{\rm k}} &= -\frac{\partial \ln Z}{\partial \lambda_{\rm k}}
 \end{align}
-Matching these with the data $\br{f_k}_{\rm data}$ is within the purview of any standard optimization algorithm. Clearly, this approach does not scale well because the number of terms in the partition function grows exponentially with system size. For relatively small systems $n\leq15$, however, this approach is feasible on a typical desktop computer.
+Matching these with the data $\br{f_k}_{\rm data}$ is within the purview of any standard optimization algorithm. Clearly, this approach does not scale well because the number of terms in the partition function grows exponentially with system size. For relatively small Ising systems $n\leq15$, however, this approach is feasible on a typical desktop computer.
 %[Simple example with logical gates?]
 
 For the Ising model, the first step in the algorithm for writing down the equations is $\mathcal{O}(K 2^{N})$ where $K$ is the number of constraints and $N$ the number of spins. In the second step, each evaluation of the objective in the minimization algorithm will be of the same order.
@@ -170,11 +170,11 @@ The {\tt Exact} class supplies methods for writing Eqs \ref{eq:fk-fk} into a fil
 
 
 \subsection{Monte Carlo histogram}
-Perhaps the most straightforward and most expensive computational approach is to use Monte Carlo Markov Chain (MCMC) sampling to approximate the distribution and adjust the parameters appropriately after each step. [For details about MCMC methods see Appendix A and \cite{MacKay:2005wc}.] The magic behind MCMC approaches is that only relative probabilities of states need to be known to return a sample of the distribution. Thus, we no longer need to calculate the partition function, but can instead compute the difference in energy between two states.
+Perhaps the most straightforward and expensive computational approach is to use Monte Carlo Markov Chain (MCMC) sampling to approximate the distribution and adjust the parameters appropriately after each step (for details about MCMC methods see Appendix A and \cite{MacKay:2005wc}). The magic behind MCMC approaches is that we can sample from the distribution given by the Boltzmann model without having to evaluate the partition function.
 
 The simplest MCMC algorithm is to generate a sample to estimate the constraints $\br{f_{\rm k}}$ from the current set of parameters and then to implement a learning rule to adjust the parameters. This can be combined with a variety of stochastic gradient descent methods to reduce the number of sampling steps. The particular technique implemented in CONIII is the Monte Carlo Histogram method \cite{Broderick:2007wq}.
 
-Since the sampling step is expensive, the idea behind Monte Carlo histogram is to reuse a sample for more than one gradient descent step because we can predict how the distribution will change if we modify the parameters slightly \cite{Broderick:2007wq}. Given that we have a sample with probability distribution $p(s)$ generated with parameters $\lambda_{\rm k}$, we would like to estimate the distribution $p'(s)$ from parameters $\lambda_{\rm k}' = \lambda_{\rm k}+\Delta\lambda_{\rm k}$.
+Since the sampling step is expensive, the idea behind Monte Carlo histogram is to reuse a sample to predict how the distribution will change if we modify the parameters slightly \cite{Broderick:2007wq}. Given that we have a sample with probability distribution $p(s)$ generated with parameters $\lambda_{\rm k}$, we would like to estimate the distribution $p'(s)$ from parameters $\lambda_{\rm k}' = \lambda_{\rm k}+\Delta\lambda_{\rm k}$.
 \begin{align}
 	p'(s) &= \frac{p'(s)}{p(s)}p(s)\\
 		&= \frac{Z}{Z'}e^{\sum_k \Delta\lambda_k f_k(s)} p(s)\\
@@ -188,15 +188,14 @@ Likewise, the ratio of the partition function can be estimated
 	\frac{Z}{Z'} \approx 1\left/\br{e^{\sum_k \Delta\lambda_k f_k(s)}}_{\rm sample}\right.
 \end{align}
 
-The main difficulty with MCH is choosing a learning rule for how to update the Lagrangian multipliers $\{\lambda_k\}$ at each iteration while being careful to stay within the bounds of a reasonable extrapolation. One suggestion is to update the parameters with some inertia
+The main difficulty with MCH is choosing a learning rule for how to update the Lagrangian multipliers $\{\lambda_k\}$ at each iteration while being careful to stay within the bounds of a reasonable extrapolation. One suggestion is to update the parameters at step $t+1$ with some inertia term weighted by $\eta$,
 \begin{align}
 	\Delta\lambda_k(t+1) &= \Delta \lambda_k(t) + \eta \Delta\lambda_k(t-1)\label{eq:mch learn1}\\
 	\Delta \lambda_k(t) &= \epsilon\left(\br{f_k}'-\br{f_k}\right)\label{eq:mch learn2}
 \end{align}
-This has the correct fixed points. 
+This has the correct fixed points because the parameters stop changing when $\br{f_k}'=\br{f_k}$.
 
-One suggestion for learning is to shrink $\epsilon$ exponentially with the number of iterations. In the code, there are more parameters $\Delta\lambda_{\rm max}$ and $\Delta\lambda_{\rm norm}\sum_k \sqrt{\Delta\lambda_{\rm k}^2}$ that restrict. Another heuristic is to begin with estimates on a small data set and increase the size of the data set as we refine our estimates of the parameters.
-
+One suggestion for learning is to shrink $\epsilon$ exponentially with the number of iterations. In the code, there are more parameters $\Delta\lambda_{\rm max}$ and $\Delta\lambda_{\rm norm}\sum_k \sqrt{\Delta\lambda_{\rm k}^2}$ that restrict how far out the MCH extrapolation is permitted to go.
 Typically, one must check in on the progress of the algorithm to tune the various parameters. If the extrapolation steps or the gradient steps are too large, the algorithm will fail to converge (or may even start diverging).
 
 The runtime for the sampling step is proportional to the number of samples $n_{\rm sample}$, number of MCMC iterations $n_{\rm MC}$, the number of constraints $K$:
@@ -213,7 +212,7 @@ MCH is implemented in the {\tt MCH} class.
 
 
 \subsection{Pseudolikelihood}
-The pseudolikelihood approach is an analytic approximation to the likelihood that drastically reduces the computational complexity of the problem and is exact in the thermodynamic limit as pictured in Fig \ref{gr:pseudo} \cite{Aurell:2012hi}. We maximize the conditional probability of a single spin given the rest of the system,
+The pseudolikelihood approach is an analytic approximation to the likelihood that drastically reduces the computational complexity of the problem and is exact in the thermodynamic limit as pictured \cite{Aurell:2012hi}. It is diagrammed in Fig \ref{gr:pseudo}. We maximize the conditional probability of a single spin given the rest of the system,
 \begin{align}
 	p\left(\sigma_{\rm i}|\boldsymbol{\sigma}_{\backslash \rm i};h,J\right) &= \left( 1+e^{-2\sigma_{\rm i} \left(h_{\rm i}+\sum_{j\neq i}J_{\rm ij}\sj\right)} \right)^{-1}
 \end{align}
@@ -231,7 +230,7 @@ In the limit where the ensemble is well sampled, the average over the data can b
 	0 &=
 \end{align}
 
-Each iteration goes like $O(RN^2)$.
+Each iteration goes like $O(n_{\rm data}N^2)$.
 
 We have implemented pseudolikelihood for the Ising model as detailed in \cite{Aurell:2012hi} in {\tt Pseudo}.
 
@@ -243,44 +242,47 @@ We have implemented pseudolikelihood for the Ising model as detailed in \cite{Au
 
 
 \subsection{Minimum Probability Flow}
-Minimum probability flow involves analytically approximating how the probability distribution \textit{changes} as we modify the \textit{configurations} \cite{SohlDickstein:2011im}. In the methods so far mentioned, the approach has been to maximize the objective (the likelihood function) by immediately taking the derivative with respect to the parameters. With MPF, we first posit a set of dynamics that will lead the data distribution to equilibrate to that of the model. When these distributions are equivalent, then there is no ``probability flow'' between them. This technique is closely related to score matching where instead we have continuous state spaces and can directly take the derivative with respect to the states without specifying dynamics \cite{Hyvarinen:2007ed}.
+Minimum probability flow involves analytically approximating how the probability distribution \textit{changes} as we modify the \textit{configurations} \cite{SohlDickstein:2011im}. In the methods so far mentioned, the approach has been to maximize the objective (the likelihood function) by immediately taking the derivative with respect to the parameters. With MPF, we first posit a set of dynamics that will lead the data distribution to equilibrate to that of the model. When these distributions are equivalent, then there is no ``probability flow'' between them. This technique is closely related to score matching where instead we have continuous state spaces and can directly take the derivative with respect to the states without specifying dynamics as we must do for a discrete state space \cite{Hyvarinen:2007ed}.
 
-As before, we start with minimizing the Kullback-Leibler divergence, but instead of taking the derivative with respect to the parameters, we first ask how the probability flows between the model and data if the dynamics are run for an infinitesimal amount of time $\epsilon$, the idea being that the relative difference between the probability distributions are minimized with optimal parameters.
+As before, we start with minimizing the Kullback-Leibler divergence between the data distribution and the model, but instead of taking the derivative with respect to the parameters, we first ask how much probability flows between the model and data if the specified dynamics are run for an infinitesimal amount of time $\epsilon$ starting at the data distribution (Fig \ref{gr:mpf}).
+The idea is that the rate at which the data distribution becomes the model distribution is minimized with optimal parameters. If the dynamics are run for long enough, the data distribution is guaranteed to become the model distribution.
+
+The derivative of the Kullback-Leibler divergence with respect to the dynamics is
 \begin{align}
-	\partial_t D_{KL}(p^{(0)}||p^{(t)}\left(\{\lambda_k\}\right)) &= \sum_{\rm i \not\in \mathcal{D}} \dot{p}_{\rm i}(\lambda_k)\\
-	K(\{\lambda_{\rm k}\}) &= \sum_{\rm i \not\in \mathcal{D}} \dot{p}_{\rm i}(\lambda_k)
+	K(\{\lambda_{\rm k}\}) = \partial_t D_{KL}(p^{(0)}||p^{(t)}\left(\{\lambda_k\}\right)) &= \sum_{\rm i \not\in \mathcal{D}} \dot{p}_{\rm i}(\lambda_k) \label{eq:mpf}
+%	K(\{\lambda_{\rm k}\}) &= \sum_{\rm i \not\in \mathcal{D}} \dot{p}_{\rm i}(\lambda_k)
 \end{align}
+and this is the objective function that we wish to minimize for MPF. The concept of minimum probability flow is explicit in Eq \ref{eq:mpf}.
 
-Monte Carlo dynamics (satisfying ergodicity and detailed balance) would lead to equilibration of the two distributions, so the suggestion of in \cite{SohlDickstein:2011im} is
+A simple set of dynamics is Monte Carlo (satisfying ergodicity and detailed balance) and leads to equilibration of the two distributions, so the suggestion in \cite{SohlDickstein:2011im} is the master equation
 \begin{align}
-	\dot{p}_{\rm i} &= \sum_{j\neq i} \Gamma_{\rm ij} p_{\rm j} -\sum_{\rm j\neq i} \Gamma_{\rm ji} p_{\rm j}
+	\dot{p}_{\rm i} &= \sum_{\rm j\neq i} \Gamma_{\rm ij} p_{\rm j} -\sum_{\rm j\neq i} \Gamma_{\rm ji} p_{\rm i}
 \end{align}
-with transition probabilities $\Gamma_{\rm ij} = g_{\rm ij}\exp\left[ \frac{1}{2}\left( E_{\rm j}-E_{\rm i} \right) \right]$ from state j to state i. The connectivity matrix $g_{\rm ij}$ specifies whether there is edge between states i and j such that probability can flow between them. By choosing a sparse $g_{\rm ij}$ while not breaking ergodicity, we drastically reduce the computational cost of calculating the objective function.
+with transition probabilities $\Gamma_{\rm ij} \propto g_{\rm ij}\exp\left[ \frac{1}{2}\left( E_{\rm j}-E_{\rm i} \right) \right]$ from state j to state i. The connectivity matrix $g_{\rm ij}$ specifies whether there is edge between states i and j such that probability can flow between them.
+By choosing a sparse (and possibly random) $g_{\rm ij}$, we can drastically reduce the computational cost of calculating the objective function as long as it is still the case that after long enough of a time we will relax to the model distribution|this is ergodicity.
 
-Finally, we must find the minimum of the objective function
-\begin{align}
-	K(\{\lambda_{\rm k}\}) &= \sum_{\rm i \not\in \mathcal{D}} \dot{p}_{\rm i}(\lambda_k)
-\end{align}
+%MPF satisfies a number of useful properties:
 
-MPF satisfies a number of useful properties:
+Minimizing the objective function $K(\{\lambda_{\rm k}\})$ can be done with any optimization algorithm. For the Ising model, analytic calculation of the gradient is also straightforward and can be given to a gradient descent technique.
 
 %[Typically with large systems, numerical precision errors can become a problem because of the exponential form of $p(\lambda_{\rm k})$. By taking the logarithm of the objective $K$ can be crucial to a working implementation.]
 
 At each iteration, MPF must calculate the probability flow between all data states and all chosen neighboring states which takes $\mathcal{O}(n_{\rm data}n_{\rm neighbors}K)$ calculations.
+
 MPF is implemented in the {\tt MPF} class.
 
 \begin{figure}[htbp]\centering
 	\includegraphics[width=\linewidth]{images/mpf}
-\caption{Minimum probability flow involves minimizing the flow of probability between the data distribution $p^{(0)}(s)$ to a nearby distribution $p^{(\epsilon)}(s)$ obtained from running deterministic dynamics for  small time $\epsilon$ as represented by the black line. When the dynamics are run for a long time, we obtain the stationary distribution $p^{\infty}(s)$.}
-\label{default}
+\caption{Minimum probability flow involves minimizing the flow of probability between the data distribution $p^{(0)}(s)$ to a nearby distribution $p^{(\epsilon)}(s)$ obtained from running deterministic dynamics for  small time $\epsilon$ as represented by the black line. When the dynamics are run for a long time, we obtain the stationary distribution $p^{(\infty)}(s)$. At each iteration of the algorithm, the distance between $p^{(0)}(s)$ and $p^{(\epsilon)}(s)$ decreases, also decreasing the distance from $p^{(0)}(s)$ and $p^{(\infty)}(s)$.}
+\label{gr:mpf}
 \end{figure}
 
 
 
 \subsection{Regularized mean-field approximation}
 %[I'm imagining that we neatly tie together the different techniques. As far as I know, they're all different approaches and no one's done a real good job relating one technique to another. It's easy enough to go read a bunch of different papers about each method, but it's not so clear why one is preferable over another.]
-One attractively simple and efficient version of the regularized approach starts
-with mean-field theory.  In the inverse Ising problem, mean-field theory is equivalent
+%One attractively simple and efficient version of the regularized approach starts with mean-field theory.
+In the inverse Ising problem, mean-field theory is equivalent
 to treating each binary individual as instead having a continuously varying state
 (corresponding to its mean value).  The inverse problem then turns into simply inverting
 the correlation matrix $C$ \cite{CocMon12}: 
@@ -315,7 +317,7 @@ While there is no guarantee that varying this one parameter will produce solutio
 good enough to ``fit within error bars,'' this approach has been successful in at least
 one case of fitting social interactions \cite{DanKraFla17}.
 
-Because there is both a matrix inversion and a sampling step (for comparing the distribution from different $\gamma$), the runtime is dominated by either $\mathcal{O}(N^3 + n_{\rm sample}n_{\rm MC}N^2)$.
+Because there is both a matrix inversion and a sampling step (for comparing the distribution from different $\gamma$), the runtime $\mathcal{O}(N^3 + n_{\rm sample}n_{\rm MC}N^2)$ is dominated by one of two terms depending on the size of the system.
 This is implemented in {\tt RegularizedMeanField}.
 
 
@@ -347,7 +349,7 @@ the threshold is initially set at a large value and then lowered,
 gradually including more clusters in the expansion, until samples from
 the resulting $J$ fit the desired statistics of the data sufficiently well.
 
-In CONIII, the selective cluster expansion method is implemented in the {\tt ClusterExpansion} class.
+In CONIII, the adaptive cluster expansion method is implemented in {\tt ClusterExpansion}.
 
 %\subsection{Bethe/Kikuchi free energy/cavity methods}
 %[Something to add?]
@@ -361,19 +363,18 @@ In CONIII, the selective cluster expansion method is implemented in the {\tt Clu
 \hline
 	Method 	& Runtime per iteration & Exact? \\
 \hline
-	Exact 	& $\mathcal{O}(2^N N^2)$ & Yes\\
-	MPF		& $\mathcal{O}(n_{\rm data}n_{\rm neighbors}N^2)$ & Sometimes\\
-	MCH 	& $\mathcal{O}(n_{\rm sample}n_{\rm MC}N^2)$ & Yes\\
-	Pseudolikelihood & $\mathcal{O}(n_{\rm data}N^2)$ & $N\rightarrow\infty$\\
-	Cluster expansion & Depends & Depends\\
+	Enumeration 		& $\mathcal{O}(2^N N^2)$ & Yes\\
+	MPF					& $\mathcal{O}(n_{\rm data}n_{\rm neighbors}N^2)$ & Sometimes\\
+	MCH 				& $\mathcal{O}(n_{\rm sample}n_{\rm MC}N^2)$ & Yes\\
+	Pseudolikelihood 	& $\mathcal{O}(n_{\rm data}N^2)$ & If $N\rightarrow\infty$\\
+	Cluster expansion 	& Depends & Set by threshold\\
 	Regularized MF & $\mathcal{O}(N^3 + n_{\rm sample}n_{\rm MC}N^2)$ & No\\
 \hline
 \end{tabular}
 \caption{Runtime per iteration for algorithms for the Ising model. See Fig \ref{gr:runtime} for example runtimes. 
 The number of iterations necessary typically goes as polynomial of the dimensionality of the problem. For the Ising model, this will mean that order $N^{2d}$ steps will be necessary. For Newton's method $d=3$.
-For the cluster expansion method, runtime depends strongly on the particular system of interest. When there are only a few interaction paths that are important, clusters will remain small and the runtime per iteration will scale like $\mathcal{O}(2^{N_{\rm clust}}N_{\rm clust}^2\binom{N}{N_{\rm clust}})$ from the computation of the partition function for each subset, but a low threshold and large clusters can lead to exponential scaling as all possible clusters and their partition functions need to be evaluated. This would be considered an ``ill-conditioned'' problem.}
+For the cluster expansion method, runtime depends strongly on the particular system of interest. When there are only a few interaction paths that are important, clusters will remain small and the runtime per iteration will scale like $\mathcal{O}(2^{N_{\rm clust}}N_{\rm clust}^2\binom{N}{N_{\rm clust}})$ from the computation of the partition function for each subset, but a low threshold and large clusters can lead to exponential scaling as all possible clusters and their partition functions need to be evaluated. This would be considered an ``ill-conditioned'' problem.}\label{tb:runtime}
 \end{center}
-\label{tb:runtime}
 \end{table}%
 
 \begin{figure}[tb]\centering
@@ -386,14 +387,14 @@ For the cluster expansion method, runtime depends strongly on the particular sys
 \section{A practical guide to choosing algorithms}
 The first question the you should ask yourself is about the scale of the problem. Is the problem on a large state space, a large system size, need to be solved many times on different data sets, or have a lot of data; and how much time or computational power is available? In general, problems with a large discrete state space and large system size will be difficult to solve with whichever method, and it will be crucial to use algorithms that scale slowly with system size for a solution in a reasonable amount of time. The inverse maxent problem is expensive, and this may determine which maxent models can be solved with available resources or a maxent model may not be the right choice once you account for the computational cost of finding the parameters.
 
-If maxent is the option of choice, then what data is available? Some algorithms like first-order MPF work poorly when the state space is well-sampled because the probability flow between data and non-data states cannot be well-measured. [In principle, MPF also works in the highly sampled regime if we consider the expansion of the KL-divergence to higher orders but that is not implemented here. Runtime for MPF and pseudolikelihood scale with the number of data points available (as shown in Table ??), so this is important to consider.]
+If maxent is the option of choice, then what data is available? Some algorithms like first-order MPF work poorly when the state space is well-sampled because the probability flow between data and non-data states cannot be well-measured. In principle, MPF also works in the highly sampled regime if we consider the expansion of the KL-divergence to higher orders but that is not implemented here. Runtime for MPF and pseudolikelihood scale with the number of data points available (as shown in Table \ref{tb:runtime}), so this is important to consider.
 If the system is poorly sampled such that subsets of the system are perfectly (or close to perfectly) correlated or anti-correlated (e.g. $\br{\si\sj}=\pm1$), then this corresponds to an infinitely large parameter, and may lead to numerical precision issues in the calculation of energies and fits dominated by the subset. Here, it will be important to regularize the problem by enforcing a sparseness constraint directly on the parameters, by using a prior for the data distribution (like with pseudocounting or the Laplace prior), or even grouping perfectly correlated units together.
 
 When solving for the parameters, an efficient approach is to get a good initial guess using a fast approximation and then using that to seed a slower but more precise algorithm. Of course, particular characteristics of the data or of the problem may make certain algorithms more feasible than others.
 
 If the state space is continuous (e.g. real-valued spins like in the Heisenberg model), MPF will return the exact parameter values for models in the exponential family \cite{SohlDickstein:2011im}.
 
-If we have a discrete state space, we must consider other techniques. Pseudolikelihood or regularized mean field are very fast techniques for a first pass. These initial guesses can seed MCH that is guaranteed to converge to the right answer but expensive and does best when the parameter step sizes are small because of the sampling approximation. This stepwise approach to the solution is neatly included in the cluster expansion which approximates the solution down to a given threshold for the entropy expansion [although one worry may be that the expansion does not converge at first and requires a large number of terms]. 
+If we have a discrete state space, we must consider other techniques. Pseudolikelihood or regularized mean field are very fast techniques for a first pass. These initial guesses can seed MCH which is expensive and does best when already close to the right answer and parameter step sizes are small. This approach of honing into the solution is neatly included in the cluster expansion which approximates the solution down to a given threshold for the entropy expansion, where the higher order cluster typically contribute much less to the description of the system. 
 
 \section{Model selection}
 %\begin{enumerate}
