--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -461,16 +461,16 @@
     "                         sample_method='metropolis',\n",
     "                         mch_approximation=mchApproximation)\n",
     "\n",
-    "estMultipliers = solver.solve(X=sample,\n",
-    "                              constraints=pair_corr(sample,exclude_empty=True,concat=True),\n",
+    "estMultipliers = solver.solve(X=maskedSample,\n",
+    "                              constraints=pair_corr(maskedSample,exclude_empty=True,concat=True),\n",
     "                              maxiter=10,\n",
     "                              cond_sample_size=lambda n:10*n,\n",
     "                              cond_sample_iters=lambda n:50*n,\n",
     "                              generate_kwargs={'systematic_iter':True},\n",
     "                              disp='detailed')\n",
     "\n",
-    "estMultipliers = solver.solve(X=sample,\n",
-    "                              constraints=pair_corr(sample,exclude_empty=True,concat=True),\n",
+    "estMultipliers = solver.solve(X=maskedSample,\n",
+    "                              constraints=pair_corr(maskedSample,exclude_empty=True,concat=True),\n",
     "                              initial_guess=estMultipliers,\n",
     "                              maxiter=10,\n",
     "                              cond_sample_size=lambda n:10*n,\n",
@@ -479,8 +479,8 @@
     "                              generate_kwargs={'systematic_iter':True},\n",
     "                              disp='detailed')\n",
     "\n",
-    "estMultipliers = solver.solve(X=sample,\n",
-    "                              constraints=pair_corr(sample,exclude_empty=True,concat=True),\n",
+    "estMultipliers = solver.solve(X=maskedSample,\n",
+    "                              constraints=pair_corr(maskedSample,exclude_empty=True,concat=True),\n",
     "                              initial_guess=estMultipliers,\n",
     "                              maxiter=10,\n",
     "                              cond_sample_size=lambda n:10*n,\n",
